scroll en tabla mis equipos

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -231,6 +231,12 @@ h6 {
   display: block
 }
 
+#scrollMiEquipo {
+  overflow-y: scroll;
+  height: 440px;
+  display: block
+}
+
 #perfil{
   background-color: rgb(26, 26, 26);
 }
