--- a/src/views/paginas/miEquipo.hbs
+++ b/src/views/paginas/miEquipo.hbs
@@ -1,5 +1,5 @@
 <div id="formularioF" class="container">
-    <div class="col-md-9 m-auto p-4">
+    <div id="scrollMiEquipo" class="col-md-9 m-auto p-4">
         <table class="table table-dark">
             <h3><p id="semiTransparente" class="text-center py-2" style="color: rgb(0, 0, 0);">{{equipo}}</p></h3>
             <thead class="table-danger">
@@ -17,9 +17,8 @@
                 {{/each}}
             </tbody>
         </table>
-        
-        <div class="col-2  p-4">
-            <a id="volver" href="/paginas/futbol" type="button" class="btn btn-danger">Volver</a>
-        </div>
+    </div>
+    <div class="col-2  p-4">
+        <a id="volver" href="/paginas/futbol" type="button" class="btn btn-danger">Volver</a>
     </div>
 </div>
