las cancha recibe foto

--- a/src/views/ingreso/registro.hbs
+++ b/src/views/ingreso/registro.hbs
@@ -25,7 +25,7 @@
                                 <input type="text" class="form-control" name="nombreUsuario" placeholder="Usuario" required>
                             </div>
                             <div class="input-group mb-3">
-                                <input type="password" class="form-control" name="contrasenia" placeholder="Contraseña" required>
+                                <input type="password" class="form-control" name="contrasenia" placeholder="Contraseña" pattern="[a,z0-9]{3,8}" required>
                             </div>
                             <div class="d-grid mb-2">
                                 <button type="submit" class="btn btn-success btn-block">
