--- a/src/views/paginas/equipo.hbs
+++ b/src/views/paginas/equipo.hbs
@@ -19,7 +19,7 @@
         </table>
     </div>
     <div style = "float: left" class="col-2  p-4">
-        <a id="volver" href="/paginas/futbol" type="button" class="btn btn-danger">Volver</a>
+        <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
     </div>
     
     {{#unless pertenezco}}
