--- a/src/views/paginas/miEquipo.hbs
+++ b/src/views/paginas/miEquipo.hbs
@@ -19,6 +19,6 @@
         </table>
     </div>
     <div class="col-2  p-4">
-        <a id="volver" href="/paginas/futbol" type="button" class="btn btn-danger">Volver</a>
+        <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
     </div>
 </div>
