--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -4,13 +4,10 @@
             <div class="row justify-content-between">
                 <div id="tablaEquipo" class="col-md-9 m-auto p-3">
                     <form class="d-flex">                        
-                        <h2 id="titDuenio" class= "md-3 px-5"><b>CANCHAS</b></h2>                     
+                        <h2 id="titDuenio" class= "md-3 px-5"><b>ESTABLECIMIENTO</b></h2>                     
                         <div class="d-flex justify-content-between m-auto ">
                             <div class="btn-group" role="group" aria-label="Basic outlined example">
                                 <a type="button" class="btn btn-primary" href="establecimiento">Agregar Establecimiento</a>
-                            </div>
-                            <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                <a type="button" class="btn btn-success" href="cancha">Agregar Cancha</a>
                             </div>
                         </div>
                         
@@ -19,10 +16,11 @@
                         <table id="tablaScroll" class="table table-hover table-info">
                             <thead>
                                 <tr>
-                                    <th>Nombre Establecimiento</th>
+                                    <th>Nombre</th>
                                     <th>Dirección</th>
                                     <th>Cuit</th>
                                     <th>Número</th>
+                                    <th>Opción</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -33,6 +31,7 @@
                                     <td><a >{{direccion}}</a></td>
                                     <td><a >{{cuit}}</a></td>
                                     <td><b>#</b></td>
+                                    <td><a href="/paginas/cancha">Agregar Cancha</a></td>
                                     
                                 </tr>
                                 {{/each}}
