--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -11,7 +11,7 @@ body {
 #nombreEquipo {
   color: rgb(6, 100, 189);
 }
-h6 {
+h6, h5{
   color: rgba(0, 0, 0, 0.575);
   text-align: center;
 }
@@ -151,10 +151,6 @@ h6 {
   margin-bottom: 0%;
   display: flex;
   align-items: center       
-}
-#inicioCentrar {
-  display: flex;
-  align-items: center
 }
 #scrollDuenio {
   overflow-y: scroll;
