--- a/src/views/partials/mensajeFlash.hbs
+++ b/src/views/partials/mensajeFlash.hbs
@@ -13,7 +13,7 @@
   </symbol>
 </svg>
 {{#if mensajeOk}}
-<div class="container">
+<div id="mensaje" class="container">
   <div class="row">
     <div class="col-md-6 mx-auto text-center">
       <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -28,7 +28,7 @@
 </div>
 {{/if}}
 {{#if mensajeMal}}
-<div class="container">
+<div id="mensaje" class="container">
   <div class="row">
     <div class="col-md-6 mx-auto text-center">
       <div class="alert alert-danger alert-dismissible fade show" role="alert">
