--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -32,7 +32,7 @@
                                     </td>
                                     <td><a >{{direccion}}</a></td>
                                     <td><a >{{cuit}}</a></td>
-                                    <td><b>#</b></td>
+                                    <td><b><a type="button" class="btn btn-success" href="cancha/{{idEstablecimiento}}">Agregar Cancha</a></b></td>
                                     
                                 </tr>
                                 {{/each}}
