perfil modo carnet, efecto zoom logo, carga de ingreso con spinner

--- a/src/views/paginas/inicio.hbs
+++ b/src/views/paginas/inicio.hbs
@@ -8,7 +8,7 @@
             </div>
             <div id="btnCentro" class="py-5 mx-auto">
                 <!-- logo de la app -->
-                <img src="/img/app/logo4.png" srcset="/img/app/logo4.png 1024w, /img/app/logo4.png 300w"
+                <img class="zoom" src="/img/app/logo4.png" srcset="/img/app/logo4.png 1024w, /img/app/logo4.png 300w"
                     sizes="(mim-width: 300px) 33.3vw, 100vw" alt="Logo App" class="mx-1">
             </div>
             <div id="btnCentro" class="py-5 mx-auto">
