--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -48,27 +48,30 @@
 <!--Modal perfil -->
 <div class="modal fade" id="miPerfil" tabindex="-1">
     <div class="modal-dialog">
-        <div class="modal-content" style="background-color: rgb(95, 162, 182);">
+        <div class="modal-content" style="background-color: rgb(245, 224, 187);">
             <!-- Modal Header -->
             <div class="modal-header" id="miPerfil">
-                <a href="/paginas/miPerfil/{{user.idUsuarios}}"><h4 class="modal-title text-white">Mi Perfil</h4></a>
+                <a href="/paginas/miPerfil/{{user.idUsuarios}}"><h4 class="modal-title text-dark">Mi Perfil</h4></a>
                 <button type="button" class="close" data-bs-dismiss="modal" id="crearEquipo">&times;</button>
             </div>
             <!-- Modal body -->
             <div class="modal-body" id="miPerfil">
-                <div class="row ">
+                <div id="sello" class="row ">
                     <div class="col-sm-3">
                        <a><img src="/img/descarga/{{user.img}}" alt="" width="125" height="120"></a>
                     </div>
-                    <div class="col-sm-3">
-                        <div class="d-flex ms-3">
-                            <i class="fas fa-user"></i><span class="ms-2">
-                                {{user.nombre}}</span><span class="ms-1">{{user.apellido}}</span>
+                    <div class="col-sm-8">
+                        <div class="d-flex">
+                            <pre class="ms-2">Nombre: <u>{{user.nombre}}                </u></pre>
                         </div>
-                        <div class="d-flex ms-3">
-                            <i id="email" class="fas fa-envelope"></i><span class="ms-2">
-                                {{user.email}}
-                            </span>
+                        <div class="d-flex">
+                            <pre class="ms-2">Apellido: <u>{{user.apellido}}              </u></pre>
+                        </div>
+                        <div class="d-flex">
+                            <pre class="ms-2">Club: <u>                        </u></pre>
+                        </div>
+                        <div class="d-flex">
+                            <pre class="ms-2">Email: <u>{{user.email}}</u></pre>
                         </div>
                     </div>
                 </div>
